--- a/docs/Deep-Learning-Enabled-Protein-Structure-Exploration.ipynb
+++ b/docs/Deep-Learning-Enabled-Protein-Structure-Exploration.ipynb
@@ -6,6 +6,7 @@
     "collapsed": true
    },
    "source": [
+    "# Note: This document is out of date\n",
     "# Deep Learning Enabeld Protein Structure Exploration\n",
     "\n",
     "Summer VFP Project 2017\n",
